# stargate-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_transfer.py
stargate_bridge/: __init__.py  client.py  exceptions.py  types.py  utils.py
tests/: test_client.py  test_integration.py
